@@ -1,3 +1,5 @@
+        * New optional argument 'startpos' to fsck_reset.
+
         * Use correct per-Store port, defaulting to UNIX sockets on localhost.
 
         * add --dbport option to mogdbsetup (Ask Bjoern Hansen)
